# genicam-poc

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  install_conan.sh
apps/: CMakeLists.txt
apps/recorder/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/camera_controller/: CMakeLists.txt  camera.cpp  camera.hh  camera_controller.cpp  camera_controller.hh  camera_settings.cpp  camera_settings.hh  cameras_context.cpp  cameras_context.hh  cameras_fwd.hh  image.cpp  image.hh
libs/camera_controller/vimba/: cameras_impl.hpp  internal_settings.hpp
libs/log/: CMakeLists.txt  logging.cpp  logging.h
libs/vmb_common/: CMakeLists.txt  ErrorCodeToMessage.h  StreamSystemInfo.cpp  StreamSystemInfo.h
tests/: CMakeLists.txt
tests/cameras_api_test/: CMakeLists.txt  main.cpp
tests/capture_single_test/: CMakeLists.txt  main.cpp  save2file.cpp
tests/capture_test/: main.cpp  save2file.h
tests/first_case/: CMakeLists.txt  ListCameras.cpp  ListCameras.h
tests/image_capture/: ApiController.cpp  Bitmap.cpp  program.cpp
tests/software_trigger_test/: main.cpp
